<resources>
    <string name="downloadable_dialog_popup_text">Additional help content must be downloaded. Mobile data will be used if you download data without connecting via Wi-Fi network. You will be taken to the download screen.</string>
    <string name="reader_sorry_message">Sorry, Time Out!!!</string>
    <string name="reader_view_not_present">Reader mode not supported by page</string>
    <string name="reader_javascript_disabled_text">Enable JavaScript in Setting and try again.</string>
    <string name="enable_javascript_title">Enable JavaScript</string>
    <string name="enable_javascript_summary">Allow sites to run JavaScript.</string>
    <string name="prefetch_bandwidth_title">Preload webpages</string>
    <string name="prefetch_loadimages_title">Load images</string>
    <string name="prefetch_loadimages_summary">Display images on webpages.</string>
    <string name="reader_night_mode">Night mode</string>
    <string name="save_as_image">Save as image</string>
    <string name="open_extract_mode">Extract mode</string>
    <string name="translate_mode">Translate</string>
    <string name="related_content_mode">Related content</string>
    <string name="reader_enlarge">Increase Font Size</string>
    <string name="reader_shrink">Decrease Font Size</string>
    <string name="incognitotab">New incognito window</string>
    <string name="close_all">Close all</string>
    <string name="share_link_chooser_title">Share via</string>
    <string name="options_menu_add_quick">Add to Quick access</string>
    <string name="block_popup_window">Block pop-ups</string>
    <string name="enable_cookies_title">Accept cookies</string>
    <string name="enable_location">Enable location</string>
    <string name="font_size_scalling">Text scaling</string>
    <string name="remember_password_title">Remember password</string>
    <string name="autofill_title_long">Autofill forms</string>
    <string name="autofill_title_summary">Manage your text for filling out web forms automatically.</string>
    <string name="font_size_preview">Preview</string>
    <string name="force_enable_zoom_summary">Override website requests to control zoom level.</string>
    <string name="force_enable_zoom">Force zoom</string>
    <string name="ctxtmenu_open_in_incognito_tab">Open in Incognito tab</string>
    <string name="ctxtmenu_copy_link_text">Copy link text</string>
    <string name="ctxtmenu_save_image">Save image</string>
    <string name="ctxtmenu_open_image_in_new_tab">Open image in new tab</string>
    <string name="ctxtmenu_try_qr_code_image">Try QR Code</string>
    <string name="ctxtmenu_select_text">Select text</string>
    <string name="enable_donottrack">Enable do not track</string>
    <string name="clear_personal_data">Delete personal data</string>
    <string name="enable_kikin">Enable kikin</string>
    <string name="pref_contentsettings_title">Content settings</string>
    <string name="pref_contentdatasettings_title">Content settings</string>
    <string name="pref_privacy_clear_history_dlg">The browser navigation history will be cleared</string>
    <string name="pref_privacy_enable_geolocation">Enable location</string>
    <string name="pref_privacy_enable_geolocation_summary">Allow sites to access your location data.</string>
    <string name="pref_security_accept_cookies">Accept cookies</string>
    <string name="pref_security_accept_cookies_summary">Allow sites to save and read cookies.</string>
    <string name="pref_content_webnotification_title">Web notifications</string>
    <string name="pref_content_notifications">Enable notifications</string>
    <string name="pref_content_clear_notification">Clear notifications</string>
    <string name="pref_content_clear_notification_summary">Clear notification access for websites</string>
    <string name="pref_content_clear_notification_dlg">Remove web notification access information?</string>
    <string name="pref_webcontent_blockpopups">Block pop-ups on webpages.</string>
    <string name="general">Basics</string>
    <string name="advanced">Advanced</string>
    <string name="bandwidth_managementl_title">Bandwidth management</string>
    <string name="cntxt_save_link">Save link</string>
    <string name="cntxt_copy_image">Copy image</string>
    <string name="cntxt_view_image">View image</string>
    <string name="category_website_settings">Websites</string>
    <string name="category_website_settings_subtitle">Set advanced settings for individual websites.</string>
    <string name="webstorage_clear_data_dialog_message">All data stored by this website will be deleted</string>
    <string name="webstorage_clear_data_dialog_cancel_button">Cancel</string>
    <string name="website_settings_popup_exceptions">Allow pop-ups</string>
    <string name="webstorage_clear_data_dialog_ok_button">Clear all</string>
    <string name="webstorage_clear_data_dialog_title">Clear stored data</string>
    <string name="geolocation_settings_page_title">Location access</string>
    <string name="geolocation_settings_page_summary_allowed">This site can access your location</string>
    <string name="geolocation_settings_page_summary_not_allowed">"This site can't access your location"</string>
    <string name="popup_settings_page_summary_allowed">This site allows pop-ups</string>
    <string name="popup_settings_page_summary_not_allowed">This site blocks pop-ups</string>
    <string name="pref_content_homepage">Set homepage</string>
    <string name="pref_default_storage">Default storage</string>
    <string name="font_size_title">Screen and text</string>
    <string name="title_privacy">Privacy</string>
    <string name="title_homepage">Homepage</string>
    <string name="clear_history">Clear history</string>
    <string name="contextmenu_open">Open</string>
    <string name="contextmenu_openlink_newwindow">Open in new window</string>
    <string name="contextmenu_copylink">Copy link</string>
    <string name="tel_dial_open">Call</string>
    <string name="tel_contact_open">Add contact</string>
    <string name="tel_copy_num">Copy</string>
    <string name="pref_development_opengl">Enable OpenGL Rendering</string>
    <string name="pref_development_hardware_accel_skia">Enable HW Accelerated Skia</string>
    <string name="pref_development_visual_indicator">Enable Visual Indicator</string>
    <string name="pref_development_cpu_upload_path">Enable Cpu Upload Path</string>
    <string name="js_engine_flags">Set JS flags</string>
    <string name="pref_development_uastring">UAString</string>
    <string name="popUp_zoomer_enable">Enable PopUpZoomer</string>
    <string name="pref_content_webgl">Enable WebGL</string>
    <string name="pref_development_single_column_rendering">Single column rendering</string>
    <string name="pref_development_normal_rendering">Normal rendering</string>
    <string name="pref_development_trace">Enable tracing</string>
    <string name="pref_development_nav_dump">Enable nav cache dump</string>
    <string name="pref_development_viewport">Use wide viewport</string>
    <string name="pref_development_error_console">Show JavaScript Console</string>
    <string name="pref_development_reset_prelogin">Reset prelogin</string>
    <string name="pref_default_text_encoding">Text encoding</string>
    <string name="pref_enable_lighttouch_title">Enable light touch</string>
    <string name="pref_enable_blockzoom_title">Enable blockzoom</string>
    <string name="pref_web_touch_debug_title">Enable Web Touch Debug</string>
    <string name="pref_text_encoding_summary">Auto-detect</string>
    <string name="pref_default_text_encoding_dialogtitle">Text encoding</string>
    <string name="pref_default_text_encoding_default">AutoDetect</string>
    <string name="options_menu_brightness">Brightness</string>
    <string name="options_menu_new_window">New window</string>
    <string name="options_menu_go_to_website">Go to website</string>
    <string name="options_menu_add_shortcut">Add shortcut to home</string>
    <string name="options_menu_scrap">Save page</string>
    <string name="options_menu_share">Share via</string>
    <string name="options_menu_find_on_page">Find on page</string>
    <string name="options_menu_private_mode">Incognito mode</string>
    <string name="options_menu_print">Print</string>
    <string name="options_menu_desktop_view">Desktop view</string>
    <string name="options_menu_settings">Settings</string>
    <string name="options_menu_help">Help</string>
    <string name="pref_content_overview_mode">Open pages in overview</string>
    <string name="pref_content_overview_mode_summary">Show overview of newly opened pages.</string>
    <string name="pref_content_data_compression">Data Compression</string>
    <string name="pref_content_data_compression_summary">Reducing data usage</string>
    <string name="debug_enable_data_compression">Use Data Compression</string>
    <string name="pref_content_fontboosting_mode">Text booster</string>
    <string name="pref_content_fontboosting_mode_summary">Change the text size for easier reading, especially when viewing desktop versions of websites on your phone. Note that the text layout may change as a result.</string>
    <string name="exit_internet">Exit Internet</string>
    <string name="reset">Reset settings</string>
    <string name="reset_settings_title">Reset settings</string>
    <string name="reset_settings_summary">Clear all browser data and reset all settings to default.</string>
    <string name="reset_settings_dlg">Settings will be reset to default.</string>
    <string name="pref_lab_fullscreen">Full screen</string>
    <string name="pref_lab_fullscreen_summary">Use Full screen mode to hide the status bar.</string>
    <string name="sync_open_pages">Sync open pages</string>
    <string name="autohide_enable">Toolbar Hide App</string>
    <string name="autohide_enable_engine">Toolbar Hide Engine</string>
    <string name="uicompositor_enable">Ui Compositor</string>
    <string name="parallel_canvas_enable">Parallel Canvas</string>
    <string name="remotedebug_enable_engine">Remote Debug Enable</string>
    <string name="edgeglow_enabled_engine">EdgeGlow Engine</string>
    <string name="enable_double_tap_patent">DoubleTap Patent Enable</string>
    <string name="placeholder_enable">Place Holder</string>
    <string name="tab_swipe">TAB Navigator</string>
    <string name="smallwindow_enable">Small Window</string>
    <string name="account">Account</string>
    <string name="pref_enable_video_link_title">Image ON</string>
    <string name="pref_enable_video_link_summary">Allow sites to access videos on the server via images</string>
    <string name="tab_manager_perspective_ux_enabled">TabManager Perspective UX</string>
    <string name="tab_manager_single_activity_enabled">TabManager Single Activity</string>
    <string name="tab_manager_compress_bitmaps_enabled">TabManager Compress Bitmaps</string>
    <string name="session_cache_enabled">Enable session cache</string>
    <string name="block_advts">Block Advts</string>
    <string name="block_advertisements">Block Advertisements</string>
    <string name="display_animated_gifs">Display Animated GIFS</string>
    <string name="animate_gifs">Animate GIFs</string>
    <string name="one_shot_image_decode">One Shot Image Decode</string>
    <string name="app_nap">App Nap</string>
    <string name="filter_bitmap">Filter Bitmap</string>
    <string name="change_background_color">Change Background Color</string>
    <string name="off_white">Off White</string>
    <string name="enable_power_saving">Enable Power Saving</string>
    <string name="extract_mode">Extract mode</string>
    <string name="multitab_dragdrop_enabled">Enable MultiTab Drag Drop</string>
    <string name="contexual_content_summary">Show a button for contextual contents of reader mode pages</string>
    <string name="contexual_content_action_bar_title">Related content</string>
</resources>